fix all assets url to absolute path, fix active menu du-an-bat-dong-san, add live reload on save

--- a/src/bat-dong-san.ejs
+++ b/src/bat-dong-san.ejs
@@ -28,7 +28,7 @@
   itemscope itemtype="http://schema.org/WebPage">
   <div class="wrapper">
     <div class="wrapper_inner">
-      <%- include('partial/header.ejs', { page: 'san-pham', lang: 'vi', engPage: 'en/product.html' }) %>
+      <%- include('partial/header.ejs', { page: 'bat-dong-san', lang: 'vi', engPage: 'en/product.html' }) %>
       <div class="content ">
         <div class="content_inner  ">
           <div class="title_outer title_without_animation with_image" data-height="180">
