--- a/src/en/about.ejs
+++ b/src/en/about.ejs
@@ -329,7 +329,7 @@
           <div class="title_outer title_without_animation with_image" data-height="180">
             <div class="title title_size_small  position_right " style="height:180px;">
               <div class="image responsive"><img itemprop="image"
-                  src="../assets/img/gioi-thieu/banner_gioithieu_main.png" alt="&nbsp;" />
+                  src="/assets/img/gioi-thieu/banner_gioithieu_main.png" alt="&nbsp;" />
               </div>
               <div class="title_holder">
                 <div class="container">
@@ -356,9 +356,9 @@
                         <div class="wpb_single_image wpb_content_element vc_align_left   nong_san_img_1">
                           <div class="wpb_wrapper">
                             <div class="vc_single_image-wrapper   vc_box_border_grey"><img width="994" height="902"
-                                src="../assets/img/gioi-thieu/banner_gioithieu.png"
+                                src="/assets/img/gioi-thieu/banner_gioithieu.png"
                                 class="vc_single_image-img attachment-full" alt=""
-                                srcset="../assets/img/gioi-thieu/banner_gioithieu.png 994w, ../assets/img/gioi-thieu/banner_gioithieu-300x272.png 300w, ../assets/img/gioi-thieu/banner_gioithieu-768x697.png 768w, ../assets/img/gioi-thieu/banner_gioithieu-700x635.png 700w"
+                                srcset="/assets/img/gioi-thieu/banner_gioithieu.png 994w, /assets/img/gioi-thieu/banner_gioithieu-300x272.png 300w, /assets/img/gioi-thieu/banner_gioithieu-768x697.png 768w, /assets/img/gioi-thieu/banner_gioithieu-700x635.png 700w"
                                 sizes="(max-width: 994px) 100vw, 994px" /></div>
                           </div>
                         </div>
@@ -393,7 +393,7 @@
            
               </div>
               <div class="vc_row wpb_row section vc_row-fluid  gia_tri_row grid_section"
-                style='background-image:url(../assets/img/gioi-thieu/gia_Tri_cot_loi.png); text-align:left;'>
+                style='background-image:url(/assets/img/gioi-thieu/gia_Tri_cot_loi.png); text-align:left;'>
                 <div class=" section_inner clearfix">
                   <div class='section_inner_margin clearfix'>
                     <div class="wpb_column vc_column_container vc_col-sm-12">
@@ -415,7 +415,7 @@
                                           <div class="wpb_wrapper">
                                             <h4 style="text-align: center;"><strong class="phr expanded"><img
                                                   class="alignnone size-full wp-image-127"
-                                                  src="../assets/img/gioi-thieu/gia_tri_hieu_qua.png"
+                                                  src="/assets/img/gioi-thieu/gia_tri_hieu_qua.png"
                                                   alt="" width="94" height="124" /></strong></h4>
                                             <h4 style="text-align: center;"><strong
                                                 class="phr expanded">Efficiency</strong></h4>
@@ -432,7 +432,7 @@
                                         <div class="wpb_text_column wpb_content_element  text_gia_Tri">
                                           <div class="wpb_wrapper">
                                             <h4 style="text-align: center;"> <img class="alignnone  wp-image-128"
-                                                src="../assets/img/gioi-thieu/gia_tri_tien_phong.png"
+                                                src="/assets/img/gioi-thieu/gia_tri_tien_phong.png"
                                                 alt="" width="107" height="109" /></h4>
                                             <h4 style="text-align: center;">Leading</h4>
                                             <p style="text-align: center;">In the way of thinking, guidance and
@@ -449,7 +449,7 @@
                                         <div class="wpb_text_column wpb_content_element  text_gia_Tri">
                                           <div class="wpb_wrapper">
                                             <h4 style="text-align: center;"> <img class="alignnone wp-image-129"
-                                                src="../assets/img/gioi-thieu/trach_nhiem.png"
+                                                src="/assets/img/gioi-thieu/trach_nhiem.png"
                                                 alt="" width="126" height="126" /></h4>
                                             <h4 style="text-align: center;">Responsibility</h4>
                                             <p style="text-align: center;">With community, customers, partners and
@@ -495,9 +495,9 @@
                           <div class="wpb_single_image wpb_content_element vc_align_left">
                             <div class="wpb_wrapper">
                               <div class="vc_single_image-wrapper   vc_box_border_grey"><img width="739" height="1000"
-                                  src="../assets/img/gioi-thieu/tam-nhin.jpg"
+                                  src="/assets/img/gioi-thieu/tam-nhin.jpg"
                                   class="vc_single_image-img attachment-full" alt=""
-                                  srcset="../assets/img/gioi-thieu/tam-nhin.jpg 739w, ../assets/img/gioi-thieu/tam-nhin-222x300.jpg 222w, ../assets/img/gioi-thieu/tam-nhin-700x947.jpg 700w"
+                                  srcset="/assets/img/gioi-thieu/tam-nhin.jpg 739w, /assets/img/gioi-thieu/tam-nhin-222x300.jpg 222w, /assets/img/gioi-thieu/tam-nhin-700x947.jpg 700w"
                                   sizes="(max-width: 739px) 100vw, 739px" /></div>
                             </div>
                           </div>
@@ -523,7 +523,7 @@
                 </div>
               </div>
               <div class="vc_row wpb_row section vc_row-fluid "
-                style='background-image:url(../assets/img/gioi-thieu/banner_lua.png); text-align:left;'>
+                style='background-image:url(/assets/img/gioi-thieu/banner_lua.png); text-align:left;'>
                 <div class=" full_section_inner clearfix">
                   <div
                     class="wpb_animate_when_almost_visible wpb_slideInUp slideInUp wpb_column vc_column_container vc_col-sm-12">
@@ -572,7 +572,7 @@
                           <div class="wpb_single_image wpb_content_element vc_align_left">
                             <div class="wpb_wrapper">
                               <div class="vc_single_image-wrapper   vc_box_border_grey"><img width="780" height="920"
-                                  src="../assets/img/gioi-thieu/thanh-tuu-e1529468079459.jpg"
+                                  src="/assets/img/gioi-thieu/thanh-tuu-e1529468079459.jpg"
                                   class="vc_single_image-img attachment-full" alt="" /></div>
                             </div>
                           </div>
@@ -598,61 +598,61 @@
                           <section class="slider slider_carusal_gallery_bank_content">
                             <div class="slide-item">
                               <figure>
-                                <img src="../assets/img/doi-tac-chien-luoc/logo_massel.svg"
+                                <img src="/assets/img/doi-tac-chien-luoc/logo_massel.svg"
                                   alt="" />
                               </figure>
                             </div>
                             <div class="slide-item">
                               <figure>
-                                <img src="../assets/img/doi-tac-chien-luoc/logo_doitac_1-2.png"
+                                <img src="/assets/img/doi-tac-chien-luoc/logo_doitac_1-2.png"
                                   alt="" />
                               </figure>
                             </div>
                             <div class="slide-item">
                               <figure>
-                                <img src="../assets/img/doi-tac-chien-luoc/logo_3.png" alt="" />
+                                <img src="/assets/img/doi-tac-chien-luoc/logo_3.png" alt="" />
                               </figure>
                             </div>
                             <div class="slide-item">
                               <figure>
-                                <img src="../assets/img/doi-tac-chien-luoc/logo_2.png" alt="" />
+                                <img src="/assets/img/doi-tac-chien-luoc/logo_2.png" alt="" />
                               </figure>
                             </div>
                             <div class="slide-item">
                               <figure>
-                                <img src="../assets/img/doi-tac-chien-luoc/logo_4.png" alt="" />
+                                <img src="/assets/img/doi-tac-chien-luoc/logo_4.png" alt="" />
                               </figure>
                             </div>
                             <div class="slide-item">
                               <figure>
-                                <img src="../assets/img/doi-tac-chien-luoc/1.png" alt="" />
+                                <img src="/assets/img/doi-tac-chien-luoc/1.png" alt="" />
                               </figure>
                             </div>
                             <div class="slide-item">
                               <figure>
-                                <img src="../assets/img/doi-tac-chien-luoc/4.png" alt="" />
+                                <img src="/assets/img/doi-tac-chien-luoc/4.png" alt="" />
                               </figure>
                             </div>
                             <div class="slide-item">
                               <figure>
-                                <img src="../assets/img/doi-tac-chien-luoc/logo-innov-ad.png"
+                                <img src="/assets/img/doi-tac-chien-luoc/logo-innov-ad.png"
                                   alt="" />
                               </figure>
                             </div>
                             <div class="slide-item">
                               <figure>
-                                <img src="../assets/img/doi-tac-chien-luoc/logo-R2-AGRO.png"
+                                <img src="/assets/img/doi-tac-chien-luoc/logo-R2-AGRO.png"
                                   alt="" />
                               </figure>
                             </div>
                             <div class="slide-item">
                               <figure>
-                                <img src="../assets/img/doi-tac-chien-luoc/orffa-logo.png" alt="" />
+                                <img src="/assets/img/doi-tac-chien-luoc/orffa-logo.png" alt="" />
                               </figure>
                             </div>
                             <div class="slide-item">
                               <figure>
-                                <img src="../assets/img/doi-tac-chien-luoc/jefo-logo.png" alt="" />
+                                <img src="/assets/img/doi-tac-chien-luoc/jefo-logo.png" alt="" />
                               </figure>
                             </div>
                           </section>
