--- a/src/en/product.ejs
+++ b/src/en/product.ejs
@@ -34,7 +34,7 @@
           <div class="title_outer title_without_animation with_image" data-height="180">
             <div class="title title_size_small  position_right " style="height:180px;">
               <div class="image responsive"><img itemprop="image"
-                  src="../assets/img/san-pham/banner_sanpham.png" alt="&nbsp;" /> </div>
+                  src="/assets/img/san-pham/banner_sanpham.png" alt="&nbsp;" /> </div>
               <div class="title_holder">
                 <div class="container">
                   <div class="container_inner clearfix">
@@ -90,9 +90,9 @@
                                           <div class="wpb_wrapper">
                                             <div class="vc_single_image-wrapper   vc_box_border_grey"><img width="792"
                                                 height="618"
-                                                src="../assets/img/san-pham/sanpham1.png"
+                                                src="/assets/img/san-pham/sanpham1.png"
                                                 class="vc_single_image-img attachment-full" alt=""
-                                                srcset="../assets/img/san-pham/sanpham1.png 792w, ../assets/img/san-pham/sanpham1-300x234.png 300w, ../assets/img/san-pham/sanpham1-768x599.png 768w, ../assets/img/san-pham/sanpham1-700x546.png 700w"
+                                                srcset="/assets/img/san-pham/sanpham1.png 792w, /assets/img/san-pham/sanpham1-300x234.png 300w, /assets/img/san-pham/sanpham1-768x599.png 768w, /assets/img/san-pham/sanpham1-700x546.png 700w"
                                                 sizes="(max-width: 792px) 100vw, 792px" /></div>
                                           </div>
                                         </div>
@@ -116,9 +116,9 @@
                                           <div class="wpb_wrapper">
                                             <div class="vc_single_image-wrapper   vc_box_border_grey"><img width="1205"
                                                 height="748"
-                                                src="../assets/img/san-pham/aqsc-01-01-01.jpg"
+                                                src="/assets/img/san-pham/aqsc-01-01-01.jpg"
                                                 class="vc_single_image-img attachment-full" alt=""
-                                                srcset="../assets/img/san-pham/aqsc-01-01-01.jpg 1205w, ../assets/img/san-pham/aqsc-01-01-01-300x186.jpg 300w, ../assets/img/san-pham/aqsc-01-01-01-768x477.jpg 768w, ../assets/img/san-pham/aqsc-01-01-01-1024x636.jpg 1024w, ../assets/img/san-pham/aqsc-01-01-01-700x435.jpg 700w"
+                                                srcset="/assets/img/san-pham/aqsc-01-01-01.jpg 1205w, /assets/img/san-pham/aqsc-01-01-01-300x186.jpg 300w, /assets/img/san-pham/aqsc-01-01-01-768x477.jpg 768w, /assets/img/san-pham/aqsc-01-01-01-1024x636.jpg 1024w, /assets/img/san-pham/aqsc-01-01-01-700x435.jpg 700w"
                                                 sizes="(max-width: 1205px) 100vw, 1205px" /></div>
                                           </div>
                                         </div>
@@ -182,9 +182,9 @@
                                           <div class="wpb_wrapper">
                                             <div class="vc_single_image-wrapper   vc_box_border_grey"><img width="1205"
                                                 height="748"
-                                                src="../assets/img/san-pham/aqsc-01-01-01.jpg"
+                                                src="/assets/img/san-pham/aqsc-01-01-01.jpg"
                                                 class="vc_single_image-img attachment-full" alt=""
-                                                srcset="../assets/img/san-pham/aqsc-01-01-01.jpg 1205w, ../assets/img/san-pham/aqsc-01-01-01-300x186.jpg 300w, ../assets/img/san-pham/aqsc-01-01-01-768x477.jpg 768w, ../assets/img/san-pham/aqsc-01-01-01-1024x636.jpg 1024w, ../assets/img/san-pham/aqsc-01-01-01-700x435.jpg 700w"
+                                                srcset="/assets/img/san-pham/aqsc-01-01-01.jpg 1205w, /assets/img/san-pham/aqsc-01-01-01-300x186.jpg 300w, /assets/img/san-pham/aqsc-01-01-01-768x477.jpg 768w, /assets/img/san-pham/aqsc-01-01-01-1024x636.jpg 1024w, /assets/img/san-pham/aqsc-01-01-01-700x435.jpg 700w"
                                                 sizes="(max-width: 1205px) 100vw, 1205px" /></div>
                                           </div>
                                         </div>
@@ -227,9 +227,9 @@
                                           <div class="wpb_wrapper">
                                             <div class="vc_single_image-wrapper   vc_box_border_grey"><img width="792"
                                                 height="618"
-                                                src="../assets/img/san-pham/sanpham3.png"
+                                                src="/assets/img/san-pham/sanpham3.png"
                                                 class="vc_single_image-img attachment-full" alt=""
-                                                srcset="../assets/img/san-pham/sanpham3.png 792w, ../assets/img/san-pham/sanpham3-300x234.png 300w, ../assets/img/san-pham/sanpham3-768x599.png 768w, ../assets/img/san-pham/sanpham3-700x546.png 700w"
+                                                srcset="/assets/img/san-pham/sanpham3.png 792w, /assets/img/san-pham/sanpham3-300x234.png 300w, /assets/img/san-pham/sanpham3-768x599.png 768w, /assets/img/san-pham/sanpham3-700x546.png 700w"
                                                 sizes="(max-width: 792px) 100vw, 792px" /></div>
                                           </div>
                                         </div>
@@ -253,9 +253,9 @@
                                           <div class="wpb_wrapper">
                                             <div class="vc_single_image-wrapper   vc_box_border_grey"><img width="792"
                                                 height="618"
-                                                src="../assets/img/san-pham/sanpham4.png"
+                                                src="/assets/img/san-pham/sanpham4.png"
                                                 class="vc_single_image-img attachment-full" alt=""
-                                                srcset="../assets/img/san-pham/sanpham4.png 792w, ../assets/img/san-pham/sanpham4-300x234.png 300w, ../assets/img/san-pham/sanpham4-768x599.png 768w,../assets/img/san-pham/sanpham4-700x546.png 700w"
+                                                srcset="/assets/img/san-pham/sanpham4.png 792w, /assets/img/san-pham/sanpham4-300x234.png 300w, /assets/img/san-pham/sanpham4-768x599.png 768w,/assets/img/san-pham/sanpham4-700x546.png 700w"
                                                 sizes="(max-width: 792px) 100vw, 792px" /></div>
                                           </div>
                                         </div>
@@ -318,9 +318,9 @@
                                           <div class="wpb_wrapper">
                                             <div class="vc_single_image-wrapper   vc_box_border_grey"><img width="792"
                                                 height="618"
-                                                src="../assets/img/san-pham/sanpham4.png"
+                                                src="/assets/img/san-pham/sanpham4.png"
                                                 class="vc_single_image-img attachment-full" alt=""
-                                                srcset="../assets/img/san-pham/sanpham4.png 792w, ../assets/img/san-pham/sanpham4-300x234.png 300w, ../assets/img/san-pham/sanpham4-768x599.png 768w, ../assets/img/san-pham/sanpham4-700x546.png 700w"
+                                                srcset="/assets/img/san-pham/sanpham4.png 792w, /assets/img/san-pham/sanpham4-300x234.png 300w, /assets/img/san-pham/sanpham4-768x599.png 768w, /assets/img/san-pham/sanpham4-700x546.png 700w"
                                                 sizes="(max-width: 792px) 100vw, 792px" /></div>
                                           </div>
                                         </div>
@@ -363,9 +363,9 @@
                                           <div class="wpb_wrapper">
                                             <div class="vc_single_image-wrapper   vc_box_border_grey"><img width="792"
                                                 height="618"
-                                                src="../assets/img/san-pham/sanpham5.png"
+                                                src="/assets/img/san-pham/sanpham5.png"
                                                 class="vc_single_image-img attachment-full" alt=""
-                                                srcset="../assets/img/san-pham/sanpham5.png 792w, ../assets/img/san-pham/sanpham5-300x234.png 300w, ../assets/img/san-pham/sanpham5-768x599.png 768w, ../assets/img/san-pham/sanpham5-700x546.png 700w"
+                                                srcset="/assets/img/san-pham/sanpham5.png 792w, /assets/img/san-pham/sanpham5-300x234.png 300w, /assets/img/san-pham/sanpham5-768x599.png 768w, /assets/img/san-pham/sanpham5-700x546.png 700w"
                                                 sizes="(max-width: 792px) 100vw, 792px" /></div>
                                           </div>
                                         </div>
