--- a/src/en/product/nguyen-lieu-thuc-pham-my-pham-en.ejs
+++ b/src/en/product/nguyen-lieu-thuc-pham-my-pham-en.ejs
@@ -33,7 +33,7 @@
           <div class="title_outer title_without_animation with_image" data-height="180">
             <div class="title title_size_small  position_right " style="height:180px;">
               <div class="image responsive"><img itemprop="image"
-                  src="../../assets/img/san-pham/banner-1.png" alt="&nbsp;" /> </div>
+                  src="/assets/img/san-pham/banner-1.png" alt="&nbsp;" /> </div>
               <div class="title_holder">
                 <div class="container">
                   <div class="container_inner clearfix">
@@ -96,13 +96,13 @@
                             <div class="widget_text widget widget_custom_html">
                               <div class="textwidget custom-html-widget">
                                 <div class="img_doitact_siderbar"><img class="alignnone size-medium wp-image-78"
-                                  src="../../assets/img/doi-tac-chien-luoc/doitact_logo_1-300x141.png"
+                                  src="/assets/img/doi-tac-chien-luoc/doitact_logo_1-300x141.png"
                                   alt="" width="300" height="141" /><img class="alignnone size-medium wp-image-189"
-                                  src="../../assets/img/doi-tac-chien-luoc/logo_massel.svg"
+                                  src="/assets/img/doi-tac-chien-luoc/logo_massel.svg"
                                   alt="" width="300" height="80" /><img class="alignnone size-full wp-image-192"
-                                  src="../../assets/img/doi-tac-chien-luoc/doitact_logo_2-300x300.png" alt=""
+                                  src="/assets/img/doi-tac-chien-luoc/doitact_logo_2-300x300.png" alt=""
                                   width="174" height="168" /><img class="alignnone size-medium wp-image-191"
-                                  src="../../assets/img/doi-tac-chien-luoc/doitact_logo_3-300x289.png"
+                                  src="/assets/img/doi-tac-chien-luoc/doitact_logo_3-300x289.png"
                                   alt="" width="300" height="188" />
                               </div>
                               </div>
@@ -135,9 +135,9 @@
                             <h3><strong>ingredient FOR PRODUCING FOODS</strong></h3>
                             <p>&nbsp;</p>
                             <h3><img class="alignnone size-full wp-image-338"
-                                src="../../assets/img/san-pham/1528276943562.png" alt=""
+                                src="/assets/img/san-pham/1528276943562.png" alt=""
                                 width="440" height="260"
-                                srcset="../../assets/img/san-pham/1528276943562.png 440w, ../../assets/img/san-pham/1528276943562-300x177.png 300w"
+                                srcset="/assets/img/san-pham/1528276943562.png 440w, /assets/img/san-pham/1528276943562-300x177.png 300w"
                                 sizes="(max-width: 440px) 100vw, 440px" /></h3>
                             <p>Group of high quality raw materials used in the food processing industry, in accordance
                               with standards produced in Vietnam.</p>
@@ -148,7 +148,7 @@
                             <h3>ingredient FOR PRODUCING COSMETICS</h3>
                             <p>&nbsp;</p>
                             <p><img class="alignnone size-full wp-image-339"
-                                src="../../assets/img/san-pham/brandbox-decovery-website-long-e1529393502969.png"
+                                src="/assets/img/san-pham/brandbox-decovery-website-long-e1529393502969.png"
                                 alt="" width="500" height="200" /></p>
                             <p>With our extensive network of partners, we have developed a range of advanced cosmetic
                               ingredients, including:</p>
@@ -169,7 +169,7 @@
 
         </div>
       </div>
-      <%- include('../../partial/footer.ejs', {lang: 'eng'}) %>
+      <%- include('../../partial/footer.ejs', {lang: 'en'}) %>
     </div>
   </div>
   <%- include('../../partial/bodyAssets.ejs') %>
