--- a/src/en/product/phu-gia-chan-nuoi-en.ejs
+++ b/src/en/product/phu-gia-chan-nuoi-en.ejs
@@ -33,7 +33,7 @@
           <div class="title_outer title_without_animation with_image" data-height="180">
             <div class="title title_size_small  position_right " style="height:180px;">
               <div class="image responsive"><img itemprop="image"
-                  src="../assets/img/san-pham/banner-1.png" alt="&nbsp;" /> </div>
+                  src="/assets/img/san-pham/banner-1.png" alt="&nbsp;" /> </div>
               <div class="title_holder">
                 <div class="container">
                   <div class="container_inner clearfix">
@@ -96,13 +96,13 @@
                             <div class="widget_text widget widget_custom_html">
                               <div class="textwidget custom-html-widget">
                                 <div class="img_doitact_siderbar"><img class="alignnone size-medium wp-image-78"
-                                  src="../../assets/img/doi-tac-chien-luoc/doitact_logo_1-300x141.png"
+                                  src="/assets/img/doi-tac-chien-luoc/doitact_logo_1-300x141.png"
                                   alt="" width="300" height="141" /><img class="alignnone size-medium wp-image-189"
-                                  src="../../assets/img/doi-tac-chien-luoc/logo_massel.svg"
+                                  src="/assets/img/doi-tac-chien-luoc/logo_massel.svg"
                                   alt="" width="300" height="80" /><img class="alignnone size-full wp-image-192"
-                                  src="../../assets/img/doi-tac-chien-luoc/doitact_logo_2-300x300.png" alt=""
+                                  src="/assets/img/doi-tac-chien-luoc/doitact_logo_2-300x300.png" alt=""
                                   width="174" height="168" /><img class="alignnone size-medium wp-image-191"
-                                  src="../../assets/img/doi-tac-chien-luoc/doitact_logo_3-300x289.png"
+                                  src="/assets/img/doi-tac-chien-luoc/doitact_logo_3-300x289.png"
                                   alt="" width="300" height="188" />
                               </div>
                               </div>
@@ -135,9 +135,9 @@
                             <h3><strong>RONOZYME® ProAct – Maximize your proteins</strong></h3>
                             <p>&nbsp;</p>
                             <p><img class="alignnone wp-image-306 size-full"
-                                src="../../assets/img/san-pham/1370245223968.jpg" alt=""
+                                src="/assets/img/san-pham/1370245223968.jpg" alt=""
                                 width="440" height="260"
-                                srcset="../../assets/img/san-pham/1370245223968.jpg 440w, ../../assets/img/san-pham/1370245223968-300x177.jpg 300w"
+                                srcset="/assets/img/san-pham/1370245223968.jpg 440w, /assets/img/san-pham/1370245223968-300x177.jpg 300w"
                                 sizes="(max-width: 440px) 100vw, 440px" /></p>
                             <p>Incorporating RONOZYME® ProAct in diets helps reduce feed costs without compromising
                               performance.</p>
@@ -164,9 +164,9 @@
                             <h3>RONOZYME<sup>®</sup> Carbohydrases – release the value in feeds</h3>
                             <p>&nbsp;</p>
                             <p><img class="alignnone wp-image-307 size-full"
-                                src="../../assets/img/san-pham/1370242190466.jpg" alt=""
+                                src="/assets/img/san-pham/1370242190466.jpg" alt=""
                                 width="440" height="260"
-                                srcset="../../assets/img/san-pham/1370242190466.jpg 440w, ../../assets/img/san-pham/1370242190466-300x177.jpg 300w"
+                                srcset="/assets/img/san-pham/1370242190466.jpg 440w, /assets/img/san-pham/1370242190466-300x177.jpg 300w"
                                 sizes="(max-width: 440px) 100vw, 440px" /></p>
                             <p>Our carbohydrases increase energy utilization, animal performance and financial returns
                               for customers.</p>
@@ -236,9 +236,9 @@
                             <h3><strong>RONOZYME® phytases &#8211; release more phosphorus</strong></h3>
                             <p>&nbsp;</p>
                             <p><img class="alignnone size-full wp-image-308"
-                                src="../../assets/img/san-pham/1370242162363.jpg" alt=""
+                                src="/assets/img/san-pham/1370242162363.jpg" alt=""
                                 width="440" height="260"
-                                srcset="../../assets/img/san-pham/1370242162363.jpg 440w, ../../assets/img/san-pham/1370242162363-300x177.jpg 300w"
+                                srcset="/assets/img/san-pham/1370242162363.jpg 440w, /assets/img/san-pham/1370242162363-300x177.jpg 300w"
                                 sizes="(max-width: 440px) 100vw, 440px" /></p>
                             <p>Our extensive range of phytases delivers great increases in phosphorus release, improving
                               performance and cutting costs.</p>
@@ -295,7 +295,7 @@
                             <p>Delivering optimal swine performance</p>
                             <p>&nbsp;</p>
                             <p><img class="alignnone size-full wp-image-312"
-                                src="../../assets/img/san-pham/vitaminsvin-e1529391169144.jpg"
+                                src="/assets/img/san-pham/vitaminsvin-e1529391169144.jpg"
                                 alt="" width="440" height="293" /></p>
                             <p>With our experience in feed supplementation we can help swine producers optimise
                               performance in a comprehensive manner.<br />
@@ -313,7 +313,7 @@
                             <h3>DIAMOND V &#8211; Immune strength for life™</h3>
                             <p>&nbsp;</p>
                             <p><img class="alignnone wp-image-314 size-full"
-                                src="../../assets/img/san-pham/Untitled-1-01-e1529391388658.jpg"
+                                src="/assets/img/san-pham/Untitled-1-01-e1529391388658.jpg"
                                 alt="" width="440" height="290" /></p>
                             <p>Diamond V Original products represent “the one-and-only original” in the field of
                               fermentation products for animal nutrition and health. Validated by extensive
@@ -353,7 +353,7 @@
                             </h3>
                             <p>&nbsp;</p>
                             <p><img class="alignnone size-full wp-image-318"
-                                src="../../assets/img/san-pham/M.TOX-01-e1529391523787.jpg"
+                                src="/assets/img/san-pham/M.TOX-01-e1529391523787.jpg"
                                 alt="" width="440" height="279" /></p>
                             <p>Olmix mycotoxin binders associate specific algae and clays to efficiently reduce the
                               impact of mycotoxins, including the most difficult to bind toxins, such as fusarium. The
@@ -366,7 +366,7 @@
                             <h3>MFEED OLMIX &#8211; SAFE DIGESTION</h3>
                             <p>&nbsp;</p>
                             <p><img class="alignnone size-full wp-image-321"
-                                src="../../assets/img/san-pham/M.FEED-01-e1529391642533.jpg"
+                                src="/assets/img/san-pham/M.FEED-01-e1529391642533.jpg"
                                 alt="" width="440" height="279" /></p>
                             <p>MFeed promotes digestive efficiency.</p>
                             <p>The range of products:</p>
@@ -383,7 +383,7 @@
 
         </div>
       </div>
-      <%- include('../../partial/footer.ejs', {lang: 'eng'}) %>
+      <%- include('../../partial/footer.ejs', {lang: 'en'}) %>
     </div>
   </div>
   <%- include('../../partial/bodyAssets.ejs') %>
