--- a/src/en/product/san-pham-dung-cho-trang-trai-en.ejs
+++ b/src/en/product/san-pham-dung-cho-trang-trai-en.ejs
@@ -35,7 +35,7 @@
           <div class="title_outer title_without_animation with_image" data-height="180">
             <div class="title title_size_small  position_right " style="height:180px;">
               <div class="image responsive"><img itemprop="image"
-                  src="../assets/img/san-pham/banner-1.png" alt="&nbsp;" /> </div>
+                  src="/assets/img/san-pham/banner-1.png" alt="&nbsp;" /> </div>
               <div class="title_holder">
                 <div class="container">
                   <div class="container_inner clearfix">
@@ -98,13 +98,13 @@
                             <div class="widget_text widget widget_custom_html">
                               <div class="textwidget custom-html-widget">
                                 <div class="img_doitact_siderbar"><img class="alignnone size-medium wp-image-78"
-                                  src="../../assets/img/doi-tac-chien-luoc/doitact_logo_1-300x141.png"
+                                  src="/assets/img/doi-tac-chien-luoc/doitact_logo_1-300x141.png"
                                   alt="" width="300" height="141" /><img class="alignnone size-medium wp-image-189"
-                                  src="../../assets/img/doi-tac-chien-luoc/logo_massel.svg"
+                                  src="/assets/img/doi-tac-chien-luoc/logo_massel.svg"
                                   alt="" width="300" height="80" /><img class="alignnone size-full wp-image-192"
-                                  src="../../assets/img/doi-tac-chien-luoc/doitact_logo_2-300x300.png" alt=""
+                                  src="/assets/img/doi-tac-chien-luoc/doitact_logo_2-300x300.png" alt=""
                                   width="174" height="168" /><img class="alignnone size-medium wp-image-191"
-                                  src="../../assets/img/doi-tac-chien-luoc/doitact_logo_3-300x289.png"
+                                  src="/assets/img/doi-tac-chien-luoc/doitact_logo_3-300x289.png"
                                   alt="" width="300" height="188" />
                               </div>
                               </div>
@@ -136,7 +136,7 @@
                           <div class="wpb_wrapper">
                             <p><strong>MILK REPLACEMENT </strong></p>
                             <p><img class="alignnone size-full wp-image-77"
-                                src="../../assets/img/san-pham/doitact_3-e1529392504214.png"
+                                src="/assets/img/san-pham/doitact_3-e1529392504214.png"
                                 alt="" width="440" height="343" /></p>
                             <p>Celtilait is a specialized substitute for baby calves, which exactly meets the needs of
                               calves and grows optimally.<br />
@@ -149,7 +149,7 @@
                             <p>&nbsp;</p>
                             <p><strong>CALCIUM TOP</strong></p>
                             <p><img class="alignnone size-full wp-image-336"
-                                src="../../assets/img/san-pham/vacuno-e1529392707504.jpg"
+                                src="/assets/img/san-pham/vacuno-e1529392707504.jpg"
                                 alt="" width="440" height="275" /></p>
                             <p>Provide enough calcium during the postnatal period to prevent fever. Supports metabolism,
                               increases the ability to excrete milk and supports the treatment of polio.</p>
@@ -157,7 +157,7 @@
                             <p>&nbsp;</p>
                             <p><strong>PREMIX-VITAMIN</strong></p>
                             <p><img class="alignnone size-full wp-image-171"
-                                src="../../assets/img/san-pham/product_detail_img_1-e1529392844503.png"
+                                src="/assets/img/san-pham/product_detail_img_1-e1529392844503.png"
                                 alt="" width="440" height="233" /></p>
                             <p>The high quality product range used for commercial farm systems includes alternative milk
                               replacers, nutrients to support disease management, improved survival and productivity.
@@ -182,7 +182,7 @@
 
         </div>
       </div>
-      <%- include('../../partial/footer.ejs', {lang: 'eng'}) %>
+      <%- include('../../partial/footer.ejs', {lang: 'en'}) %>
     </div>
   </div>
   <%- include('../../partial/bodyAssets.ejs') %>
