--- a/src/partial/header.ejs
+++ b/src/partial/header.ejs
@@ -14,7 +14,7 @@
                 <div class="q_logo">
                   <a itemprop="url" href="/">
                     <img itemprop="image" class="normal"
-                      src="assets/img/logo.png" alt="Logo" /> <img
+                      src="/assets/img/logo.png" alt="Logo" /> <img
                       itemprop="image" class="light"
                       src="/assets/img/index/logo.png" alt="Logo" /> <img
                       itemprop="image" class="dark"
@@ -170,7 +170,7 @@
                     <div class="textwidget custom-html-widget">
                       <ul class="career_header">
                         <li><a href="/en/career.html"><img
-                              src="../assets/img/index/career_icon.svg">CAREER</a>
+                              src="/assets/img/index/career_icon.svg">CAREER</a>
                         </li>
                       </ul>
                     </div>
