--- a/src/san-pham/phu-gia-chan-nuoi.ejs
+++ b/src/san-pham/phu-gia-chan-nuoi.ejs
@@ -33,7 +33,7 @@
           <div class="title_outer title_without_animation with_image" data-height="180">
             <div class="title title_size_small  position_right " style="height:180px;">
               <div class="image responsive"><img itemprop="image"
-                  src="../assets/img/san-pham/banner-1.png" alt="&nbsp;" /> </div>
+                  src="/assets/img/san-pham/banner-1.png" alt="&nbsp;" /> </div>
               <div class="title_holder">
                 <div class="container">
                   <div class="container_inner clearfix">
@@ -96,13 +96,13 @@
                             <div class="widget_text widget widget_custom_html">
                               <div class="textwidget custom-html-widget">
                                 <div class="img_doitact_siderbar"><img class="alignnone size-medium wp-image-78"
-                                  src="../assets/img/doi-tac-chien-luoc/doitact_logo_1-300x141.png"
+                                  src="/assets/img/doi-tac-chien-luoc/doitact_logo_1-300x141.png"
                                   alt="" width="300" height="141" /><img class="alignnone size-medium wp-image-189"
-                                  src="../assets/img/doi-tac-chien-luoc/logo_massel.svg"
+                                  src="/assets/img/doi-tac-chien-luoc/logo_massel.svg"
                                   alt="" width="300" height="80" /><img class="alignnone size-full wp-image-192"
-                                  src="../assets/img/doi-tac-chien-luoc/doitact_logo_2-300x300.png" alt=""
+                                  src="/assets/img/doi-tac-chien-luoc/doitact_logo_2-300x300.png" alt=""
                                   width="174" height="168" /><img class="alignnone size-medium wp-image-191"
-                                  src="../assets/img/doi-tac-chien-luoc/doitact_logo_3-300x289.png"
+                                  src="/assets/img/doi-tac-chien-luoc/doitact_logo_3-300x289.png"
                                   alt="" width="300" height="188" />
                               </div>
                               </div>
@@ -189,9 +189,9 @@
                           <div class="wpb_wrapper">
                             <p><strong>MEN TIÊU HÓA | ENZYME PROTEASE</strong></p>
                             <p><img class="wp-image-306 alignleft"
-                                src="../assets/img/san-pham/1370245223968.jpg" alt=""
+                                src="/assets/img/san-pham/1370245223968.jpg" alt=""
                                 width="236" height="139"
-                                srcset="../assets/img/san-pham/1370245223968.jpg 440w, ../assets/img/san-pham/1370245223968-300x177.jpg 300w"
+                                srcset="/assets/img/san-pham/1370245223968.jpg 440w, /assets/img/san-pham/1370245223968-300x177.jpg 300w"
                                 sizes="(max-width: 236px) 100vw, 236px" /></p>
                             <p><strong>Tối ưu tiêu hóa Protien</strong></p>
                             <p>RONOZYME® ProAct ( Proteases ) là enzyme phân hủy các phân tử protein thành các axit amin
@@ -211,9 +211,9 @@
                             </p>
                             <p><strong>MEN TIÊU HÓA | ENZYME PHYTASES</strong></p>
                             <p><img class="wp-image-308 alignright"
-                                src="../assets/img/san-pham/1370242162363.jpg" alt=""
+                                src="/assets/img/san-pham/1370242162363.jpg" alt=""
                                 width="240" height="142"
-                                srcset="../assets/img/san-pham/1370242162363.jpg 440w, ../assets/img/san-pham/1370242162363-300x177.jpg 300w"
+                                srcset="/assets/img/san-pham/1370242162363.jpg 440w, /assets/img/san-pham/1370242162363-300x177.jpg 300w"
                                 sizes="(max-width: 240px) 100vw, 240px" /><strong>RONOZYME® HIPHOS</strong> (Phytases)
                               là men tiêu hóa giải phóng phốt pho thực vật từ axit phytic.</p>
                             <p>Sản xuất: DSM (Hà Lan)</p>
@@ -221,9 +221,9 @@
                             <p><strong>HOẠT CHẤT TẠO MÀU CAROPHYLL®</strong></p>
                             <p><strong>Carotenoid</strong></p>
                             <p><img class="wp-image-310 alignleft"
-                                src="../assets/img/san-pham/1456329151042.jpg" alt=""
+                                src="/assets/img/san-pham/1456329151042.jpg" alt=""
                                 width="322" height="190"
-                                srcset="../assets/img/san-pham/1456329151042.jpg 440w, ../assets/img/san-pham/1456329151042-300x177.jpg 300w"
+                                srcset="/assets/img/san-pham/1456329151042.jpg 440w, /assets/img/san-pham/1456329151042-300x177.jpg 300w"
                                 sizes="(max-width: 322px) 100vw, 322px" /></p>
                             <p>CAROPHYLL® là hoạt chất tạo màu cho gia súc, gia cầm và thủy sản.</p>
                             <p>Sản xuất: DSM (Hà Lan)</p>
@@ -235,7 +235,7 @@
                             <p>&nbsp;</p>
                             <p><strong>VEVOVITALL ® | ACID BENZOIC &#8211; Tối đa hiệu suất chăn nuôi.</strong></p>
                             <p><img class="wp-image-312 alignleft"
-                                src="../assets/img/san-pham/vitaminsvin-e1529391169144.jpg"
+                                src="/assets/img/san-pham/vitaminsvin-e1529391169144.jpg"
                                 alt="" width="233" height="155" /></p>
                             <p>VevoVitall® là một nguồn axit benzoic tinh khiết.</p>
                             <p>Sản xuất: DSM (Hà Lan)</p>
@@ -246,7 +246,7 @@
                             <p><strong>TĂNG CƯỜNG MIỄN DỊCH &#8211; TỐI ƯU SỨC KHOẺ ĐƯỜNG RUỘT</strong></p>
                             <p><strong> Gia súc &#8211; Gia cầm và Thủy sản.</strong></p>
                             <p><img class="wp-image-314 size-full aligncenter"
-                                src="../assets/img/san-pham/Untitled-1-01-e1529391388658.jpg"
+                                src="/assets/img/san-pham/Untitled-1-01-e1529391388658.jpg"
                                 alt="" width="440" height="290" /></p>
                             <p>Sản xuất: Diamond V (Hoa Kỳ)</p>
                             <p>Dòng sản phẩm:<br />
@@ -262,7 +262,7 @@
                               <strong>Phòng ngừa nguy cơ nhiễm độc tố nấm mốc</strong>
                             </p>
                             <p><img class="alignnone size-full wp-image-318"
-                                src="../assets/img/san-pham/M.TOX-01-e1529391523787.jpg"
+                                src="/assets/img/san-pham/M.TOX-01-e1529391523787.jpg"
                                 alt="" width="440" height="279" /></p>
                             <p>Hấp phụ độc tố nấm của Olmix là sự kết hợp đặc biệt giữa khoáng sét và tảo biển giúp hiệu
                               quả trong việc giảm tác động của độc tố nấm mốc.</p>
