--- a/src/san-pham/premix-vitamin-khoang.ejs
+++ b/src/san-pham/premix-vitamin-khoang.ejs
@@ -32,7 +32,7 @@
           <div class="title_outer title_without_animation with_image" data-height="180">
             <div class="title title_size_small  position_right " style="height:180px;">
               <div class="image responsive"><img itemprop="image"
-                  src="../assets/img/san-pham/banner-1.png" alt="&nbsp;" /> </div>
+                  src="/assets/img/san-pham/banner-1.png" alt="&nbsp;" /> </div>
               <div class="title_holder">
                 <div class="container">
                   <div class="container_inner clearfix">
@@ -95,13 +95,13 @@
                             <div class="widget_text widget widget_custom_html">
                               <div class="textwidget custom-html-widget">
                                 <div class="img_doitact_siderbar"><img class="alignnone size-medium wp-image-78"
-                                  src="../assets/img/doi-tac-chien-luoc/doitact_logo_1-300x141.png"
+                                  src="/assets/img/doi-tac-chien-luoc/doitact_logo_1-300x141.png"
                                   alt="" width="300" height="141" /><img class="alignnone size-medium wp-image-189"
-                                  src="../assets/img/doi-tac-chien-luoc/logo_massel.svg"
+                                  src="/assets/img/doi-tac-chien-luoc/logo_massel.svg"
                                   alt="" width="300" height="80" /><img class="alignnone size-full wp-image-192"
-                                  src="../assets/img/doi-tac-chien-luoc/doitact_logo_2-300x300.png" alt=""
+                                  src="/assets/img/doi-tac-chien-luoc/doitact_logo_2-300x300.png" alt=""
                                   width="174" height="168" /><img class="alignnone size-medium wp-image-191"
-                                  src="../assets/img/doi-tac-chien-luoc/doitact_logo_3-300x289.png"
+                                  src="/assets/img/doi-tac-chien-luoc/doitact_logo_3-300x289.png"
                                   alt="" width="300" height="188" />
                               </div>
                               </div>
@@ -188,9 +188,9 @@
                           <div class="wpb_wrapper">
                             <h4>PREMIX DÀNH CHO GIA SÚC &#8211; GIA CẦM</h4>
                             <p><img class="alignnone size-full wp-image-329"
-                                src="../assets/img/san-pham/1370242057787.jpg" alt=""
+                                src="/assets/img/san-pham/1370242057787.jpg" alt=""
                                 width="440" height="260"
-                                srcset="../assets/img/san-pham/1370242057787.jpg 440w, ../assets/img/san-pham/1370242057787-300x177.jpg 300w"
+                                srcset="/assets/img/san-pham/1370242057787.jpg 440w, /assets/img/san-pham/1370242057787-300x177.jpg 300w"
                                 sizes="(max-width: 440px) 100vw, 440px" /></p>
                             <p>Chúng tôi hiểu rằng mỗi giai đoạn phát triển của vật nuôi đều có nhu cầu về hàm lượng về
                               vitamin &amp; khoáng khác nhau. Vitamin &amp; Khoáng giữ vai trò đặc biệt trong chế độ
@@ -215,7 +215,7 @@
                           <div class="wpb_wrapper">
                             <h4>PREMIX THỦY SẢN</h4>
                             <p><img class="alignnone size-full wp-image-172"
-                                src="../assets/img/san-pham/product_detail_img_2-e1529392306366.png"
+                                src="/assets/img/san-pham/product_detail_img_2-e1529392306366.png"
                                 alt="" width="440" height="233" /></p>
                             <p>Sản phẩm Premix dành cho Thủy sản từ DSM giúp cho:</p>
                             <p>&#8211; Tăng trưởng và phát triển theo đúng giai đoạn<br />
