--- a/src/en/news-events.ejs
+++ b/src/en/news-events.ejs
@@ -33,7 +33,7 @@
           <div class="title_outer title_without_animation with_image" data-height="180">
             <div class="title title_size_small  position_right " style="height:180px;">
               <div class="image responsive"><img itemprop="image"
-                  src="../assets/img/tin-tuc-su-kien/banner-1.png" alt="&nbsp;" /> </div>
+                  src="/assets/img/tin-tuc-su-kien/banner-1.png" alt="&nbsp;" /> </div>
               <div class="title_holder">
                 <div class="container">
                   <div class="container_inner clearfix">
