--- a/src/en/product/premix-vitamin-khoang-en.ejs
+++ b/src/en/product/premix-vitamin-khoang-en.ejs
@@ -33,7 +33,7 @@
           <div class="title_outer title_without_animation with_image" data-height="180">
             <div class="title title_size_small  position_right " style="height:180px;">
               <div class="image responsive"><img itemprop="image"
-                  src="../assets/img/san-pham/banner-1.png" alt="&nbsp;" /> </div>
+                  src="/assets/img/san-pham/banner-1.png" alt="&nbsp;" /> </div>
               <div class="title_holder">
                 <div class="container">
                   <div class="container_inner clearfix">
@@ -96,13 +96,13 @@
                             <div class="widget_text widget widget_custom_html">
                               <div class="textwidget custom-html-widget">
                                 <div class="img_doitact_siderbar"><img class="alignnone size-medium wp-image-78"
-                                  src="../../assets/img/doi-tac-chien-luoc/doitact_logo_1-300x141.png"
+                                  src="/assets/img/doi-tac-chien-luoc/doitact_logo_1-300x141.png"
                                   alt="" width="300" height="141" /><img class="alignnone size-medium wp-image-189"
-                                  src="../../assets/img/doi-tac-chien-luoc/logo_massel.svg"
+                                  src="/assets/img/doi-tac-chien-luoc/logo_massel.svg"
                                   alt="" width="300" height="80" /><img class="alignnone size-full wp-image-192"
-                                  src="../../assets/img/doi-tac-chien-luoc/doitact_logo_2-300x300.png" alt=""
+                                  src="/assets/img/doi-tac-chien-luoc/doitact_logo_2-300x300.png" alt=""
                                   width="174" height="168" /><img class="alignnone size-medium wp-image-191"
-                                  src="../../assets/img/doi-tac-chien-luoc/doitact_logo_3-300x289.png"
+                                  src="/assets/img/doi-tac-chien-luoc/doitact_logo_3-300x289.png"
                                   alt="" width="300" height="188" />
                               </div>
                               </div>
@@ -135,9 +135,9 @@
                             <h3>PREMIX-VITAMIN FOR LIVESTOCK</h3>
                             <p>&nbsp;</p>
                             <p><img class="alignnone size-full wp-image-329"
-                                src="../../assets/img/san-pham/1370242057787.jpg" alt=""
+                                src="/assets/img/san-pham/1370242057787.jpg" alt=""
                                 width="440" height="260"
-                                srcset="../../assets/img/san-pham/1370242057787.jpg 440w, ../../assets/img/san-pham/1370242057787-300x177.jpg 300w"
+                                srcset="/assets/img/san-pham/1370242057787.jpg 440w, /assets/img/san-pham/1370242057787-300x177.jpg 300w"
                                 sizes="(max-width: 440px) 100vw, 440px" /></p>
                             <p>We believe that every single animal should receive the right level of vitamins. The
                               reason is simple: vitamins are vital to their health, well-being and performance. Vitamins
@@ -171,7 +171,7 @@
                           <div class="wpb_wrapper">
                             <h4>PREMIX &#8211; VITAMIN FOR AQUA</h4>
                             <p><img class="alignnone size-full wp-image-172"
-                                src="../../assets/img/san-pham/product_detail_img_2-e1529392306366.png"
+                                src="/assets/img/san-pham/product_detail_img_2-e1529392306366.png"
                                 alt="" width="440" height="233" /></p>
                             <p>It is crucial in farmed fish. Fish are unable to synthesize Vitamin , so it must be
                               obtained through their diets. Vitamin is needed for:</p>
@@ -200,7 +200,7 @@
 
         </div>
       </div>
-      <%- include('../../partial/footer.ejs', {lang: 'eng'}) %>
+      <%- include('../../partial/footer.ejs', {lang: 'en'}) %>
     </div>
   </div>
   <%- include('../../partial/bodyAssets.ejs') %>
